# Bidding

./: pyproject.toml
src/: engine.py  main.py  model.py  security.py  websocketManager.py
tests/: testBids.py
