[project]
name = "test-pydantic"
version = "0.1.0"
description = "Initially started out as a test to see how much I know pydantic. Now this will be a bidding system"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.139.0",
    "passlib[bcrypt]>=1.7.4",
    "psycopg[binary]>=3.3.4",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "sqlmodel>=0.0.39",
]
[tool.ruff]
line-length = 80
