[project]
name = "test-pydantic"
version = "0.1.0"
description = "Initially started out as a test to see how much I know pydantic. Now this will be a bidding system"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.139.0",
    "psycopg[binary]>=3.3.4",
    "pwdlib[argon2]>=0.3.0",
    "pyjwt>=2.13.0",
    "python-dotenv>=1.2.2",
    "sqlmodel>=0.0.39",
]
[tool.ruff]
line-length = 80
target-version="py314"